# LibraryManagementSystem

./: CMakeLists.txt
Resources/: Books.json  Clients.json  Staff.json
code/: main.cpp
code/Classes/BookManager/Cpp/: Book.cpp  BookManager.cpp
code/Classes/BookManager/Header/: Book.h  BookManager.h
code/Classes/ClientManager/Cpp/: Client.cpp  ClientManager.cpp  client.cpp
code/Classes/ClientManager/Header/: Client.h  ClientManager.h
code/Classes/OperationManager/Cpp/: Operation.cpp  OperationManager.cpp
code/Classes/OperationManager/Header/: Operation.h  OperationManager.h
code/Classes/StaffManager/Cpp/: Staff.cpp  StaffManager.cpp
code/Classes/StaffManager/Header/: Staff.h  StaffManager.h
